syntax = "proto3";
option java_multiple_files = true;
package com.github.tjake.jlama.net;

message NormRequest {
  bytes workerid = 1;
  bytes uuid = 2;
  int32 layer = 3;
  float sumSq = 4;
  float sum = 5;
}

message NormResponse {
  float sumSq = 1;
  float sum = 2;
}

message GenerateRequest {
  bytes workerid = 1;
  bytes session = 2;
  bytes tensor = 3;
}

message GenerateResponse {
  bytes session = 1;
  int32 token = 2;
  int32 position = 3;
}

message RegisterRequest {
  bytes workerid = 1;
}

message RegisterResponse {
  int32 offset = 1;
  int32 length = 2;
}

service JlamaService {
  rpc register(RegisterRequest) returns (RegisterResponse);
  rpc generate(stream GenerateRequest) returns (stream GenerateResponse);
  rpc norm(NormRequest) returns (NormResponse);
}